style.css
@import "https://fonts.googleapis.com/css2?family=EB+Garamond";

:root {
	--light-theme: #adff2f;
	--dark-theme: #9acd32;
	--accent-theme: #ffff00;
}

body.bluetheme {
	--light-theme: #00eeff;
	--dark-theme: #0088ff;
	--accent-theme: #adff2f;
}

body.redtheme {
	--light-theme: #fc8e86;
	--dark-theme: #eb4034;
	--accent-theme: #f59f16;
}

body, * {
	font-family: "EB Garamond", 'Courier New', Courier, monospace;
	text-align: center;
}

body {
	padding: 0;
	margin: 0 !important;
	margin-top: 0 !important;
	position: relative;
	top: -20px;
	overflow: auto;
}

a {
	color: blue;
}

body > header#main-si-header {
	width: 100%;
	background-color: var(--light-theme);
	position: relative;
}


body > header#main-si-header > h1 {
	padding-top: 50px;
	padding-bottom: 50px;
}
body > header#main-si-header > #si-tab-holder {
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-start;
	align-items: flex-end;
	align-content: flex-end;
	position: sticky;
	top: 28px;
	background-color: transparent;
}

#si-tab-holder > si-tab {
	background-color: var(--dark-theme);
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	border: 2px double black;
	width: 100px;
	padding: 5px;
	flex: 1 1 0;
	box-sizing: content-box;
	min-height: 21px;
	height: 100%;
	cursor: pointer;
}


#si-tab-holder > si-tab.active {
	background-color: var(--accent-theme);
	font-weight: bold;
	cursor: default;
}

#si-tab-holder > si-tab:not(.active):hover {
	background-color: var(--light-theme);
}

#main-si-content-section {
	box-sizing: border-box;
	width: 100%;
	padding: 5px;
}

#main-si-content-section > section[id] {
	display: none;
}

#main-si-content-section > section[id].active {
	display: block;
}

#main-si-content-section > section[id] > :is(h1, h2, h3, h4, h5, h6, header) {
	text-align: center;
}

#main-si-content-section > section[id] {
	text-align: justify;
}


footer#main-footer {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	background-color: white;
	border-top: 1px solid black;
	padding: 5px;
}

footer#filler-footer {
	visibility: hidden;
}

ol, ul, li {
	list-style-position: inside;
	margin-left: 0;
	padding-left: 0;
}

::marker {
	font-weight: bold;
}

ol ol {
	list-style-type: lower-alpha;
}

ol:not(ol ol) > li:not(:last-child) {
	margin-bottom: 10px;
}

button {
	background-color: var(--light-theme);
	padding: 5px;
	border: 1px solid black;
	border-radius: 5px;
	cursor: pointer;
	color: inherit;
}

button:hover {
	background-color: var(--dark-theme);
}

img {
	margin-left: auto;
	margin-right: auto;
	max-width: 90%;
	height: auto;
}

